--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
@@ -20,7 +20,7 @@
         }
     }
     <TabPane Key="tab_page" Tab="页面">
-        <PageSetting PageProperty="@DragDropStateService.GetGlobalPageProperty(AppId, PageId)"></PageSetting>
+        <PageSetting Page="@DragDropStateService.GetPage(AppId, PageId)"></PageSetting>
     </TabPane>
 </Tabs>
 
