--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/CardWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/CardWrap.razor
@@ -1,4 +1,4 @@
-﻿@inherits DesignEngineComponentBase
+﻿@inherits ContainerComponentBase
 
 <Card Title="@Component.ComponentProperty.Title" Style="width:100%; height:auto">
     <Extra>
