--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/CarouselWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/CarouselWrap.razor
@@ -1,4 +1,4 @@
-﻿@inherits DesignEngineComponentBase
+﻿@inherits ContainerComponentBase
 
 <Carousel Style="height:160px; background: #364d79;">
     @for (int i = 0; i < ItemCount; i++)
