--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/GridWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/GridWrap.razor
@@ -1,4 +1,4 @@
-﻿@inherits DesignEngineComponentBase
+﻿@inherits ContainerComponentBase
 
 <div style="height: auto;">
     @for (int r = 0; r < Rows; r++)
