--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LayoutWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LayoutWrap.razor
@@ -1,4 +1,4 @@
-﻿@inherits DesignEngineComponentBase
+﻿@inherits ContainerComponentBase
 
 <Layout Style="height:100%">
     <Sider Style="background: #f4f7fa; height:100%;">
