--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/TabsWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/TabsWrap.razor
@@ -1,4 +1,4 @@
-﻿@inherits DesignEngineComponentBase
+﻿@inherits ContainerComponentBase
 
 <Tabs OnChange="OnTabChange" Animated Style="width:100%; height: auto;">
     @for (int i = 0; i < ItemCount; i++)
