--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -1,4 +1,5 @@
 ﻿@inject DragDropStateService DragDropStateService
+@inject ComponentStateWrapper<bool?> State
 
 <div class="designpanel" style="margin:5px; height:100%; overflow-y: auto;">
     <DropItemContainer ContainerComponent="@DragDropStateService.GetRootComponent(AppId, PageId)"></DropItemContainer>
@@ -20,11 +21,15 @@
     [SupplyParameterFromQuery(Name = "pt")]
     public int PageType { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        base.OnInitialized();
+        if(State.Value is null)
+        {
+            Init();
+            State.Value = true;
+        }
 
-        Init();
+        await base.OnInitializedAsync();
     }
 
     private void Init()
