- 解决 DesignPage 页面组件渲染闪烁问题 - 将所有 OnInitialized 改为 OnInitializedAsync

--- a/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
@@ -3,7 +3,7 @@
 @layout ProAdminLayout
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
-@inject ComponentStateWrapper<IList<AppSchema>> State
+@inject ComponentStateWrapper<MyApps, IList<AppSchema>> State
 
 <div style="width:80%; overflow: hidden; margin:auto; padding: 10px;">
     <div style="display: flex; justify-content: space-between; margin: 0 0 8px 5px;">
@@ -47,7 +47,6 @@
 </Modal>
 
 @code {
-    //private IList<AppSchema> _appSchemas = [];
     private bool _visible = false;
 
     RenderFragment avatarTemplate = @<Avatar Icon="appstore"></Avatar>;
