--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/TableTemplate.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/TableTemplate.razor
@@ -17,11 +17,11 @@
 
 @code {
     #region Init
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         Init();
 
-        base.OnInitialized();
+        await base.OnInitializedAsync();
     }
 
     private void Init()
