--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/MenuManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/MenuManager.razor
@@ -4,7 +4,7 @@
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
 @inject IMessageService Message
-@inject ComponentStateWrapper<IList<MenuSchema>> State
+@inject ComponentStateWrapper<MenuManager, IList<MenuSchema>> State
 
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
     <div style="text-align: left; width:250px;">
@@ -57,7 +57,6 @@
     public string AppId { get; set; }
 
     private ITable _table;
-    //private IList<MenuSchema> _menuList;
     IEnumerable<MenuSchema> selectedRows;
 
     int _pageIndex = 1;
