添加 <PageTitle> 标签

--- a/src/Admin/H.LowCode.Admin/Layout/ProAdminLayout.razor
+++ b/src/Admin/H.LowCode.Admin/Layout/ProAdminLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>H.LowCode</PageTitle>
+
 <AntDesign.ProLayout.BasicLayout Logo="@("logo.png")" Title="H.LowCode" MenuData="_menuData"
     Layout="AntDesign.ProLayout.Layout.Top">
     <RightContentRender>
