--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>@AppId</PageTitle>
+
 <AntDesign.ProLayout.BasicLayout Logo="@("logo.png")" Title="@AppId" MenuData="_menuData">
     <RightContentRender>
         @*<AntDesign.Pro.Template.Components.RightContent />*@
