--- a/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>页面设计器</PageTitle>
+
 <Layout Class="layout" Style="height:100%;">
     <Content Style="height:100%;">
         @Body
